--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "passport-local": "^1.0.0"
   },
   "scripts": {
-    "start": "node start"
+    "start": "node server.js"
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
